# locatieserver

./: .buildinfo  .cookiecutter.json  .cookietemple.yml  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.rst  authors.html  code_of_conduct.html  contributing.html  cookietemple.cfg  genindex.html  index.html  installation.html  locatieserver.api.html  locatieserver.client.html  locatieserver.client.tests.html  locatieserver.html  locatieserver.schema.html  locatieserver.schema.tests.html  modules.html  noxfile.py  objects.inv  openapi.json  py-modindex.html  pyproject.toml  readme.html  reference.html  search.html  searchindex.js  usage.html
.github/: release-drafter.yml
.github/workflows/: build_package.yml  publish_package.yml  release.yml  run_cookietemple_lint.yml  run_tests.yml  sync_project.yml  tests.yml
_modules/: index.html
_modules/locatieserver/client/: free.html  lookup.html  suggest.html  utils.html
_modules/locatieserver/client/tests/: test_free.html  test_lookup.html  test_suggest.html
_modules/locatieserver/schema/: base.html  error.html  free.html  lookup.html  suggest.html  utils.html
_modules/locatieserver/schema/tests/: test_utils.html
_sources/: authors.rst.txt  contributing.rst.txt  index.rst.txt  locatieserver.api.rst.txt  locatieserver.client.tests.rst.txt  locatieserver.rst.txt  locatieserver.schema.tests.rst.txt  reference.rst.txt  usage.rst.txt
docs/: Makefile  conf.py  contributing.rst  index.md  index.rst  installation.rst  locatieserver.client.rst  locatieserver.schema.rst  make.bat  modules.rst  reference.md  requirements.txt  usage.md
locatieserver/: __init__.py  __main__.py
locatieserver/client/: __init__.py  config.py  free.py  lookup.py  suggest.py  utils.py
locatieserver/client/tests/: test_free.py  test_lookup.py
locatieserver/schema/: __init__.py  base.py  free.json  free.py  lookup.json  lookup.py  suggest.py  utils.py
makefiles/: Linux.mk  Windows.mk
src/locatieserver/: __main__.py  operations.py
src/locatieserver/client/: __init__.py  config.py  free.py  lookup.py  suggest.py  utils.py
src/locatieserver/schema/: base.py  error.py  free.py  lookup.py  suggest.py  utils.py
tests/: __init__.py  test_main.py
tests/client/: test_free.py  test_lookup.py  test_suggest.py  test_utils.py
tests/schemas/: test_utils.py
