[project]
name = "locatieserver"
version = "0.6.0"
description = "Locatieserver"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Jelmer Draaijer", email = "info@jelmert.nl" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "httpx",
  "pydantic>=2,<3",
]
urls.Changelog = "https://github.com/foarsitter/locatieserver/releases"
urls.documentation = "https://locatieserver.readthedocs.io"
urls.homepage = "https://github.com/foarsitter/locatieserver"
urls.repository = "https://github.com/foarsitter/locatieserver"

[dependency-groups]
dev = [
  "coverage[toml]>=7.3",
  "furo>=2023.8.19",
  "mypy>=1.5.1",
  "myst-parser>=0.16.1",
  "pre-commit-uv>=3.8.0",
  "pre-commit>=3.3.3",
  "pre-commit-hooks>=4.1",
  "pygments>=2.10",
  "pytest>=6.2.5",
  "sphinx>=4.3.2",
  "sphinx-autobuild>=2021.3.14",
  "sphinx-click>=5.0.1",
  "typeguard>=2.13.3",
  "xdoctest[colors]>=0.15.10",
  "ruff>=0.7.4",
]


[tool.coverage.paths]
source = [ "src", "*/site-packages" ]
tests = [ "tests", "*/tests" ]

[tool.coverage.run]
branch = true
source = [ "locatieserver", "tests" ]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
plugins = [
  "pydantic.mypy",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = ["./docs"]


[tool.ruff.lint]
select = ["ALL"]
ignore = ["D103", "S101", "PLR2004", "D"]
fixable = [ "ALL" ]
unfixable = [  ]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
