[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools" ]

[project]
name = "locatieserver"
version = "0.6.1"
description = "Locatieserver"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Jelmer Draaijer", email = "info@jelmert.nl" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "httpx",
  "pydantic>=2,<3",
]
urls.Changelog = "https://github.com/foarsitter/locatieserver/releases"
urls.documentation = "https://locatieserver.readthedocs.io"
urls.homepage = "https://github.com/foarsitter/locatieserver"
urls.repository = "https://github.com/foarsitter/locatieserver"

[dependency-groups]
dev = [
  "coverage[toml]>=7.3",
  "furo>=2024.8.6",
  "mypy>=1.5.1",
  "myst-parser>=3.0.1",
  "nox>=2024.10.9",
  "pre-commit>=3.3.3",
  "pre-commit-hooks>=4.1",
  "pre-commit-uv>=3.8",
  "pygments>=2.10",
  "pytest>=6.2.5",
  "ruff>=0.7.4",
  "sphinx>=7.1.2",
  "sphinx-autobuild>=2021.3.14",
  "sphinx-click>=6",
  "typeguard>=2.13.3",
  "xdoctest[colors]>=1.2",
]

[tool.ruff]
target-version = "py39"

exclude = [ "./docs" ]
lint.select = [ "ALL" ]
lint.ignore = [ "D", "D103", "PLR2004", "S101", "UP006", "UP007" ]
lint.fixable = [ "ALL" ]
lint.unfixable = [  ]
lint.isort.force-single-line = true
lint.isort.lines-after-imports = 2

[tool.coverage.paths]
source = [ "src/" ]
tests = [ "tests", "*/tests" ]

[tool.coverage.run]
relative_files = true
branch = true
source = [ "locatieserver", "tests" ]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
plugins = [
  "pydantic.mypy",
]
